# immich-mcp

./: .crush.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  CRUSH.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE  README.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  USAGE_EXAMPLES.md  docker-compose.yml  main.py  n8n-mcp  pyproject.toml  requirements.txt  run_functional_tests.sh  run_test_ping.sh  sample_claude_desktop_config.json
.github/workflows/: ci.yml  functional-tests.yml  release.yml
.openhands/microagents/: repo.md
docs/: INITIALIZATION.md
immich_mcp/: cache.py  cli.py  client.py  config.py  rate_limiter.py  server.py  stdio_bridge.py  tool_definitions.py  tools.py  tools.py.bak
src/: main.py
src/immich_mcp/: config.py  immich_api.py  main.py  server.py
src/immich_mcp_server/: immich_api.py  main.py  server.py
tests/: __init__.py  _mock_stdio.py  fake_immich_api.py  functional_tests.py  manual_stdio_test.py  manual_stdio_test.py.bak  setup_immich.py  simple_test.py  temp_test_httpx.py  test_lifespan.py  test_project_sanity.py  test_resources.py  utils.py
tests/functional/: README.md  run_functional_tests.py
tests/immich_mcp/: test_client.py  test_config.py  test_server.py  test_tools.py  test_tools.py.bak
