[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "immich_mcp_server"
version = "0.0.1"
description = "An MCP server for Immich."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
]

[tool.setuptools]
packages = ["immich_mcp_server"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
