[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "immich-mcp"
version = "0.5.0"
description = "An MCP server for Immich."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp",
    "uvicorn",
    "gunicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
    "mcp[cli]",
    "pydantic-ai-slim[mcp]",
]

[tool.setuptools]
packages = ["immich_mcp"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
