[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "immich-mcp"
dynamic = ["version"]
description = "An MCP server for Immich."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp",
    "uvicorn",
    "gunicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
    "mcp[cli]",
    "pydantic-ai-slim[mcp]",
]

[project.urls]
Repository = "https://github.com/immich-app/immich-mcp"
Issues = "https://github.com/immich-app/immich-mcp/issues"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.hatch.build.targets.wheel]
packages = ["src/immich_mcp"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
